--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_TMDB_KEY = e3d6ccc171504d045b3fa2164b8e69a3
-REACT_APP_BASE_URL = https://api.themoviedb.org/3/discover/movie
+REACT_APP_BASE_URL = https://api.themoviedb.org/3
 REACT_APP_IMG_URL = https://image.tmdb.org/t/p/w500
